k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellofincra
  namespace: hellofincra
  labels:
    app: hellofincra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellofincra
  template:
    metadata:
      labels:
        app: hellofincra
    spec:
      containers:
      - name: hellofincra
        image: sysadminexe/hello-fincra:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: hellofincra
spec:
  selector:
    app: hellofincra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
